--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Program\Logging\LogSeverity.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\.POST-Relay.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\.GET-Relay.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\ParseUserUpdate.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\FilesView\.GET-Relay.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\FilesView\.POST-Relay.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -124,7 +125,7 @@
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\ParseUserConfiguration.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\CreateUser.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\SendControlPanel.cs" />
-    <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\SendUserConfig.cs" />
+    <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\SendUserSettings.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\SendAdminUserFilesView.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\ControlPanel\UpdateUser.cs" />
     <Compile Include="Program\Worker\ConnectionHandler\Serve\Log-in-out\SendLoggedOut.cs" />
@@ -177,7 +178,7 @@
     <Content Include="html\changePassword.html" />
     <Content Include="html\controlPanel\controlPanel.html" />
     <Content Include="html\controlPanel\createUser.html" />
-    <Content Include="html\controlPanel\userConfig.html" />
+    <Content Include="html\controlPanel\userSettings.html" />
     <Content Include="html\controlPanel\userFiles.html" />
     <Content Include="html\files.html" />
     <Content Include="html\loggedOut.html" />
