implemented download and other routing

--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -70,7 +70,7 @@ http
 	server
 	{
 		listen						127.0.0.1:80;
-		#listen						10.93.19.1:80;
+		listen						10.93.19.1:80;
 		#listen						172.16.20.69:80;
 
 		location /
@@ -94,7 +94,7 @@ http
 	server
 	{
 		listen						127.0.0.1:443 ssl;
-		#listen						10.93.19.1:443 ssl;
+		listen						10.93.19.1:443 ssl;
 		#listen						172.16.20.69:443 ssl;
 
 		ssl_certificate				"C:\_certs\server.crt";
