--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -71,7 +71,7 @@ http
 	{
 		listen						127.0.0.1:80;
 		listen						10.93.19.1:80;
-		#listen						172.16.20.69:80;
+		listen						172.16.20.68:80;
 
 		location /
 		{
@@ -95,7 +95,7 @@ http
 	{
 		listen						127.0.0.1:443 ssl;
 		listen						10.93.19.1:443 ssl;
-		#listen						172.16.20.69:443 ssl;
+		listen						172.16.20.68:443 ssl;
 
 		ssl_certificate				"C:\_certs\server.crt";
 		ssl_certificate_key			"C:\_certs\privateKey.pem";
