last commit with  reverse proxy

--- a/NGINX-v1.26.2/conf/nginx.conf
+++ b/NGINX-v1.26.2/conf/nginx.conf
@@ -50,6 +50,10 @@ http
 {
 	include							mime.types;
 	default_type					application/octet-stream;
+	
+	client_max_body_size 			0;
+    proxy_request_buffering			off;
+
 	tcp_nodelay						on;
 
 	access_log						off;
